<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/Title_string"
        android:textColor="@color/darkgray"
        android:textSize="22sp" />

    <Button
        android:id="@+id/app1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showToast"
        android:text="@string/button1_app" />

    <Button
        android:id="@+id/app2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showToast"
        android:text="@string/button2_app" />

    <Button
        android:id="@+id/app3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showToast"
        android:text="@string/button3_app" />

    <Button
        android:id="@+id/app4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showToast"
        android:text="@string/button4_app" />

    <Button
        android:id="@+id/app5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showToast"
        android:text="@string/button5_App" />

    <Button
        android:id="@+id/app6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorAccent"
        android:onClick="showToast"
        android:text="@string/button6_app"
        android:textColor="@android:color/white" />

</LinearLayout>